<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/param_group"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/param1_titles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/param1_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/param1_title1"
            android:textColor="@android:color/darker_gray"
            android:textSize="20sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <RadioGroup
        android:id="@+id/param1_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="15dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/param1_option1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="3dp"
            android:layout_weight="1"
            android:background="@drawable/radius_selector_toggle_button"
            android:button="@android:color/transparent"
            android:checked="true"
            android:elevation="6dp"
            android:gravity="center"
            android:text="@string/param1_option1"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/param1_option2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="3dp"
            android:layout_weight="1"
            android:background="@drawable/radius_selector_toggle_button"
            android:button="@android:color/transparent"
            android:elevation="6dp"
            android:gravity="center"
            android:text="@string/param1_option2"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/param1_option3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="3dp"
            android:layout_weight="1"
            android:background="@drawable/radius_selector_toggle_button"
            android:button="@android:color/transparent"
            android:elevation="6dp"
            android:gravity="center"
            android:text="@string/param1_option3"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/param1_option4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="3dp"
            android:layout_weight="1"
            android:background="@drawable/radius_selector_toggle_button"
            android:button="@android:color/transparent"
            android:elevation="6dp"
            android:gravity="center"
            android:text="@string/param1_option4"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/param1_option5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="3dp"
            android:layout_weight="1"
            android:background="@drawable/radius_selector_toggle_button"
            android:button="@android:color/transparent"
            android:elevation="6dp"
            android:gravity="center"
            android:text="@string/param1_option5"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </RadioGroup>

</androidx.appcompat.widget.LinearLayoutCompat>

