<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_screen_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:background="@color/white"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:nestedScrollingEnabled="true">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_location_view"
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/search_view_background"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:queryBackground="@null"
        android:theme="@style/MyAppSearchView"
        app:iconifiedByDefault="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.589"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:queryHint="@string/search_tooltip">

    </androidx.appcompat.widget.SearchView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/gourmet_search_button"
        android:layout_width="97dp"
        android:layout_height="37dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/searching_button"
        android:clickable="true"
        android:elevation="7dp"
        android:gravity="left|center"
        android:paddingLeft="45dp"
        android:text="@string/search"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/gourmet_search_button_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="1dp"
        android:elevation="7dp"
        android:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/gourmet_search_button"
        app:layout_constraintEnd_toEndOf="@+id/gourmet_search_button"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="@+id/gourmet_search_button"
        app:layout_constraintTop_toTopOf="@+id/gourmet_search_button"
        app:layout_constraintVertical_bias="0.615"
        app:srcCompat="@drawable/search_fill0_wght400_grad0_opsz24" />

    <ExpandableListView
        android:id="@+id/parameter_settings"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="30dp"
        android:background="@color/transparent"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:fadingEdgeLength="5dp"
        android:groupIndicator="@null"
        android:nestedScrollingEnabled="true"
        android:requiresFadingEdge="vertical"
        app:layout_constraintBottom_toTopOf="@+id/hotpapper_credit_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_location_view">

    </ExpandableListView>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/hotpapper_credit_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="74dp"
        android:layout_marginBottom="28dp"
        android:scaleX="3"
        android:scaleY="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/hotpepper_s" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/hotpepper_credit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="5dp"
        android:text="@string/hotpapper_credit"
        android:textColor="@color/darker_gray_trans"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hotpapper_credit_image" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/auto_complete_recycler_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:clickable="true"
        android:elevation="2dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/search_location_view"
        app:layout_constraintStart_toStartOf="@+id/search_location_view"
        app:layout_constraintTop_toBottomOf="@+id/search_location_view"
        app:layout_constraintVertical_bias="0.0">

    </androidx.recyclerview.widget.RecyclerView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/search_function_unavailable"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clickable="true"
        android:elevation="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:autoSizeTextType="none"
            android:gravity="center_horizontal"
            android:text="@string/search_function_unavailable"
            android:textColor="@color/midium_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/searching"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateTint="@color/dark_orange"
            android:indeterminateTintMode="src_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>